menu and main separated, routed cleared

--- a/dev/views/global.css
+++ b/dev/views/global.css
@@ -1,1 +1,6 @@
-body {background-color: #ccc;}
+body {background-color: #ccc; margin: 0;}
+
+.app-container {    display: flex;
+    flex-direction: row;
+}
+.app-container > * {}
