--- a/dev/components/menu/style.css
+++ b/dev/components/menu/style.css
@@ -1,11 +1,9 @@
 .menu {
-    position: fixed;
     top: 0;
     left: 0;
     bottom: 0;
-    width: 40px;
     background-color: tomato;
-& .toggle-btn {
+    .toggle-btn {
       position: absolute;
       top: 5px;
       right: 10px;
