added new script for npm, configured dev and prod configs, added deploy-adress

--- a/public/style.css
+++ b/public/style.css
@@ -3,7 +3,8 @@ body {background-color: #ccc; margin: 0;}
 .app-container__2R1gR {    display: flex;
     flex-direction: row;
 }
-.app-container__2R1gR > * {}.menu__mo1s5 {
+.app-container__2R1gR > * {}.main__uxKcd {background: #eee;}
+/* hello */.menu__mo1s5 {
     top: 0;
     left: 0;
     bottom: 0;
@@ -29,6 +30,5 @@ $column: 200px;
 .menu_link__mjupT {
     background: color-mod($blue alpha(90%));
     width: $column;
-}.main__uxKcd {background: #eee;}
-/* hello */
+}
 /*# sourceMappingURL=data:application/json;charset=utf-8;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbXSwibmFtZXMiOltdLCJtYXBwaW5ncyI6IiIsImZpbGUiOiJzdHlsZS5jc3MiLCJzb3VyY2VSb290IjoiIn0=*/
