--- a/public/style.css
+++ b/public/style.css
@@ -12,7 +12,7 @@ body {background-color: #ccc; margin: 0;}
       position: absolute;
       top: 5px;
       right: 10px;
-      font-size: 26px;
+      font-size: 22px;
       font-weight: 500;
       color: white;
       cursor: pointer;
@@ -29,6 +29,8 @@ $column: 200px;
 .menu_link__3UzpJ {
     background: color-mod($blue alpha(90%));
     width: $column;
-}.main__1p1DJ {background: #eee;}
-/* hello */
+}.main__1p1DJ {
+	background: #eee;
+}
+
 /*# sourceMappingURL=data:application/json;charset=utf-8;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbXSwibmFtZXMiOltdLCJtYXBwaW5ncyI6IiIsImZpbGUiOiJzdHlsZS5jc3MiLCJzb3VyY2VSb290IjoiIn0=*/
