--- a/public/style.css
+++ b/public/style.css
@@ -3,7 +3,14 @@ body {background-color: #ccc; margin: 0;}
 .app-container__2R1gR {    display: flex;
     flex-direction: row;
 }
-.app-container__2R1gR > * {}.menu__3Q2-r {
+.app-container__2R1gR > * {}.main__1p1DJ {
+	background: #eee;
+}
+
+.menu_link__active__VTf_3{
+    font-weight: bold;
+}
+.menu__3Q2-r {
     top: 0;
     left: 0;
     bottom: 0;
@@ -19,6 +26,7 @@ body {background-color: #ccc; margin: 0;}
   }
 }
 
+
 $blue: #056ef0;
 $column: 200px;
 
@@ -29,8 +37,7 @@ $column: 200px;
 .menu_link__3UzpJ {
     background: color-mod($blue alpha(90%));
     width: $column;
-}.main__1p1DJ {
-	background: #eee;
 }
+
 
 /*# sourceMappingURL=data:application/json;charset=utf-8;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbXSwibmFtZXMiOltdLCJtYXBwaW5ncyI6IiIsImZpbGUiOiJzdHlsZS5jc3MiLCJzb3VyY2VSb290IjoiIn0=*/
