--- a/public/style.css
+++ b/public/style.css
@@ -1,10 +1,54 @@
-body {background-color: #ccc; margin: 0;}
-
-.app-container__2R1gR {    display: flex;
-    flex-direction: row;
+body {
+	background-color: #ccc;
+	margin: 0;
 }
-.app-container__2R1gR > * {}.main__1p1DJ {
-	background: #eee;
+
+.app-container__2R1gR {
+	display: flex;
+	flex-direction: row;
+}
+.app-container__2R1gR > * {
+}
+
+.test_style__2Hv3c {
+	color: red;
+}
+.slidecontainer__FRwBE {
+	width: 100%; /* Width of the outside container */
+}
+
+/* The slider itself */
+.slider__3JybG {
+	-webkit-appearance: none;
+	width: 100%;
+	height: 15px;
+	border-radius: 5px;
+	background: #d3d3d3;
+	outline: none;
+	opacity: 0.7;
+	transition: opacity 0.2s;
+}
+
+.slider__3JybG:hover {
+	opacity: 1;
+}
+
+.slider__3JybG::-webkit-slider-thumb {
+	-webkit-appearance: none;
+	appearance: none;
+	width: 25px;
+	height: 25px;
+	border-radius: 50%;
+	background: #4caf50;
+	cursor: pointer;
+}
+
+.slider__3JybG::-moz-range-thumb {
+	width: 25px;
+	height: 25px;
+	border-radius: 50%;
+	background: #4caf50;
+	cursor: pointer;
 }
 
 .menu_link__active__VTf_3{
@@ -39,5 +83,8 @@ $column: 200px;
     width: $column;
 }
 
+.main__1p1DJ {
+	background: #eee;
+}
 
 /*# sourceMappingURL=data:application/json;charset=utf-8;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbXSwibmFtZXMiOltdLCJtYXBwaW5ncyI6IiIsImZpbGUiOiJzdHlsZS5jc3MiLCJzb3VyY2VSb290IjoiIn0=*/
