--- a/dev/views/Quests/slider.css
+++ b/dev/views/Quests/slider.css
@@ -13,12 +13,43 @@
 	opacity: 0.7;
 	-webkit-transition: 0.2s;
 	transition: opacity 0.2s;
+	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,ffffff+10,3FD847+10,3FD847+90,ffffff+90,ffffff+100 */
+	background: #ffffff; /* Old browsers */
+	background: -moz-linear-gradient(
+		left,
+		#ffffff 0%,
+		#ffffff 10%,
+		#3fd847 10%,
+		#3fd847 90%,
+		#ffffff 90%,
+		#ffffff 100%
+	); /* FF3.6-15 */
+	background: -webkit-linear-gradient(
+		left,
+		#ffffff 0%,
+		#ffffff 10%,
+		#3fd847 10%,
+		#3fd847 90%,
+		#ffffff 90%,
+		#ffffff 100%
+	); /* Chrome10-25,Safari5.1-6 */
+	background: linear-gradient(
+		to right,
+		#ffffff 0%,
+		#ffffff 10%,
+		#3fd847 10%,
+		#3fd847 90%,
+		#ffffff 90%,
+		#ffffff 100%
+	); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ffffff',GradientType=1 ); /* IE6-9 */
+	background-size: 20%;
+	width: 280px;
+	padding: 0 20px;
 }
-
 .slider:hover {
 	opacity: 1;
 }
-
 .slider::-webkit-slider-thumb {
 	-webkit-appearance: none;
 	appearance: none;
@@ -28,7 +59,6 @@
 	background: #4caf50;
 	cursor: pointer;
 }
-
 .slider::-moz-range-thumb {
 	width: 25px;
 	height: 25px;
