--- a/public/style.css
+++ b/public/style.css
@@ -46,12 +46,15 @@ $column: 200px;
     width: $column;
 }
 
-.slidecontainer__FRwBE {
+.main__1p1DJ {
+	background: #eee;
+}
+.slidecontainer__1XLQf {
 	width: 100%; /* Width of the outside container */
 }
 
 /* The slider itself */
-.slider__3JybG {
+.slider__3cExz {
 	-webkit-appearance: none;
 	width: 100%;
 	height: 15px;
@@ -60,13 +63,26 @@ $column: 200px;
 	outline: none;
 	opacity: 0.7;
 	transition: opacity 0.2s;
+	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,ffffff+10,3FD847+10,3FD847+90,ffffff+90,ffffff+100 */
+	background: #ffffff; /* Old browsers */ /* FF3.6-15 */ /* Chrome10-25,Safari5.1-6 */
+	background: linear-gradient(
+		to right,
+		#ffffff 0%,
+		#ffffff 10%,
+		#3fd847 10%,
+		#3fd847 90%,
+		#ffffff 90%,
+		#ffffff 100%
+	); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ffffff',GradientType=1 ); /* IE6-9 */
+	background-size: 20%;
+	width: 280px;
+	padding: 0 20px;
 }
-
-.slider__3JybG:hover {
+.slider__3cExz:hover {
 	opacity: 1;
 }
-
-.slider__3JybG::-webkit-slider-thumb {
+.slider__3cExz::-webkit-slider-thumb {
 	-webkit-appearance: none;
 	appearance: none;
 	width: 25px;
@@ -75,16 +91,12 @@ $column: 200px;
 	background: #4caf50;
 	cursor: pointer;
 }
-
-.slider__3JybG::-moz-range-thumb {
+.slider__3cExz::-moz-range-thumb {
 	width: 25px;
 	height: 25px;
 	border-radius: 50%;
 	background: #4caf50;
 	cursor: pointer;
-}
-.main__1p1DJ {
-	background: #eee;
 }
 
 /*# sourceMappingURL=data:application/json;charset=utf-8;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbXSwibmFtZXMiOltdLCJtYXBwaW5ncyI6IiIsImZpbGUiOiJzdHlsZS5jc3MiLCJzb3VyY2VSb290IjoiIn0=*/
