add prev-next animation, neead refactor select bar

--- a/dev/components/Quest/QuestList/QuestList.scss
+++ b/dev/components/Quest/QuestList/QuestList.scss
@@ -4,6 +4,7 @@ $descTitleColor: #009653;
 .questWrapper {
 	//padding-bottom: 20px;
 	padding-top: 10px;
+	width: 760px;
 }
 .questTitle {
 	text-transform: uppercase;
