--- a/dev/components/Main/style.sass
+++ b/dev/components/Main/style.sass
@@ -4,6 +4,7 @@
 	max-width: 800px;
 	padding: 0px 0px 0 100px;
 	overflow: hidden;
+	position: relative;
 
 	*
 		margin: 0;
@@ -15,6 +16,10 @@
 	h4
 		padding-top: 10px;
 		padding-left: 22px;
+	h4 + span
+		//display: flex;
+		//flex-wrap: nowrap;
+		//flex-direction: row-reverse;
 
 
 
