--- a/public/style.css
+++ b/public/style.css
@@ -2,14 +2,14 @@
 	https://fonts.googleapis.com/css?family=Montserrat:400,
 	700,
 	900&subset=cyrillic
-);
+); /* Start of GLOBAL styles */
 body {
 	background-color: #dedede;
 	margin: 0;
 	font-family: "Montserrat", sans-serif;
 }
 
-.app-container__1q1lW {
+.app-container {
 	display: flex;
 	flex-direction: row;
 	height: 100vh;
@@ -17,15 +17,278 @@ body {
 	position: relative;
 }
 
-.test_style__zZRjD {
+.test_style {
 	color: red;
 }
 
 @media (max-width: 480px) {
-	.app-container__1q1lW {
+	.app-container {
 		flex-direction: column;
 	}
 }
+
+/*  -= Default =- */
+.move-appear {
+	-webkit-transform: translate3D(100%, 0, 0);
+	transform: translate3D(100%, 0, 0);
+}
+
+.move-appear-active {
+	-webkit-transform: translate3D(0, 0, 0);
+	transform: translate3D(0, 0, 0);
+	transition: all 700ms ease-out;
+}
+
+.move-enter {
+	opacity: 1;
+	background: #ffccc2;
+	-webkit-transform: translate3D(100%, 0, 0);
+	transform: translate3D(100%, 0, 0);
+	position: absolute;
+}
+
+.move-enter-active {
+	-webkit-transform: translate3D(0%, 0, 0);
+	transform: translate3D(0%, 0, 0);
+	opacity: 1;
+	transition: all 700ms ease-out;
+	position: absolute;
+}
+
+.move-leave {
+	opacity: 1;
+}
+
+.move-leave-active {
+	-webkit-transform: translate3D(-100%, 0, 0);
+	transform: translate3D(-100%, 0, 0);
+	opacity: 1;
+	transition: all 700ms ease-out;
+}
+
+/*  -= Next =- */
+.move-next-appear {
+	-webkit-transform: translate3D(100%, 0, 0);
+	transform: translate3D(100%, 0, 0);
+}
+
+.move-next-appear-active {
+	-webkit-transform: translate3D(0, 0, 0);
+	transform: translate3D(0, 0, 0);
+	transition: all 700ms ease-out;
+}
+
+.move-next-enter {
+	opacity: 1;
+	background: transparent;
+	-webkit-transform: translate3D(100%, 0, 0);
+	transform: translate3D(100%, 0, 0);
+	position: absolute;
+}
+
+.move-next-enter-active {
+	-webkit-transform: translate3D(0%, 0, 0);
+	transform: translate3D(0%, 0, 0);
+	opacity: 1;
+	transition: all 700ms ease-out;
+}
+
+.move-next-leave {
+	opacity: 1;
+}
+
+.move-next-leave-active {
+	-webkit-transform: translate3D(-100%, 0, 0);
+	transform: translate3D(-100%, 0, 0);
+	opacity: 1;
+	transition: all 700ms ease-out;
+}
+
+/*  -= Prev =- */
+.move-prev-appear {
+	-webkit-transform: translate3D(100%, 0, 0);
+	transform: translate3D(100%, 0, 0);
+}
+
+.move-prev-appear-active {
+	-webkit-transform: translate3D(0, 0, 0);
+	transform: translate3D(0, 0, 0);
+	transition: all 700ms ease-out;
+}
+
+.move-prev-enter {
+	opacity: 1;
+	background: transparent;
+	-webkit-transform: translate3D(-100%, 0, 0);
+	transform: translate3D(-100%, 0, 0);
+	position: absolute;
+}
+
+.move-prev-enter-active {
+	-webkit-transform: translate3D(0%, 0, 0);
+	transform: translate3D(0%, 0, 0);
+	opacity: 1;
+	transition: all 700ms ease-out;
+}
+
+.move-prev-leave {
+	opacity: 1;
+}
+
+.move-prev-leave-active {
+	-webkit-transform: translate3D(100%, 0, 0);
+	transform: translate3D(100%, 0, 0);
+	opacity: 1;
+	transition: all 700ms ease-out;
+}
+
+/* New Bar Styles*/
+.input-range .input-range__slider {
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
+	background: #3f51b5;
+	border: 1px solid #3f51b5;
+	border-radius: 100%;
+	cursor: pointer;
+	display: block;
+	height: 2rem;
+	margin-left: -2.5rem;
+	margin-top: -1.5rem;
+	position: absolute;
+	top: 50%;
+	transition: box-shadow 0.3s ease-out, -webkit-transform 0.3s ease-out;
+	transition: transform 0.3s ease-out, box-shadow 0.3s ease-out;
+	transition: transform 0.3s ease-out, box-shadow 0.3s ease-out,
+		-webkit-transform 0.3s ease-out;
+	width: 5rem;
+}
+
+.input-range__slider:active {
+	-webkit-transform: scale(1.3);
+	transform: scale(1.3);
+}
+
+.input-range__slider:focus {
+	box-shadow: 0 0 0 5px rgba(63, 81, 181, 0.2);
+}
+
+.input-range--disabled .input-range__slider {
+	background: #cccccc;
+	border: 1px solid #cccccc;
+	box-shadow: none;
+	-webkit-transform: none;
+	transform: none;
+}
+
+.input-range__slider-container {
+	transition: left 0.3s ease-out;
+}
+
+.input-range__label {
+	color: #aaaaaa;
+	font-family: "Helvetica Neue", san-serif;
+	font-size: 0.8rem;
+	-webkit-transform: translateZ(0);
+	transform: translateZ(0);
+	white-space: nowrap;
+}
+
+.input-range__label--min,
+.input-range__label--max {
+	bottom: -1.4rem;
+	position: absolute;
+}
+
+.input-range__label--min {
+	left: 0;
+}
+
+.input-range__label--max {
+	right: 0;
+}
+
+.input-range__label--value {
+	position: absolute;
+	top: -1.8rem;
+}
+
+.input-range__label-container {
+	left: -50%;
+	position: relative;
+}
+
+.input-range__label--max .input-range__label-container {
+	left: 50%;
+}
+
+.input-range__track {
+	background: #eeeeee;
+	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,ffffff+10,3FD847+10,3FD847+90,ffffff+90,ffffff+100 */
+	background: #ffffff;
+	/* Old browsers */
+	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#eeeeee+0,eeeeee+17,ffffff+17,ffffff+20,eeeeee+20,eeeeee+37,ffffff+37,ffffff+40,eeeeee+40,eeeeee+57,ffffff+57,ffffff+60,eeeeee+60,eeeeee+77,ffffff+77,ffffff+80,eeeeee+80,eeeeee+100 */
+	background: #eeeeee;
+	/* Old browsers */
+	/* FF3.6-15 */
+	/* Chrome10-25,Safari5.1-6 */
+	background: linear-gradient(
+		to right,
+		#eeeeee 0%,
+		#eeeeee 18%,
+		#ffffff 18%,
+		#ffffff 20.5%,
+		#eeeeee 20.5%,
+		#eeeeee 38.5%,
+		#ffffff 38.5%,
+		#ffffff 41%,
+		#eeeeee 41%,
+		#eeeeee 59%,
+		#ffffff 59%,
+		#ffffff 61.5%,
+		#eeeeee 61.5%,
+		#eeeeee 79.5%,
+		#ffffff 79.5%,
+		#ffffff 82%,
+		#eeeeee 82%,
+		#eeeeee 100%
+	);
+	/* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eeeeee', endColorstr='#eeeeee',GradientType=1 );
+	/* IE6-9 */
+	border-radius: 0.3rem;
+	cursor: pointer;
+	display: block;
+	height: 0.3rem;
+	height: 1rem;
+	position: relative;
+	transition: left 0.3s ease-out, width 0.3s ease-out;
+}
+
+.input-range--disabled .input-range__track {
+	background: #eeeeee;
+}
+
+.input-range__track--background {
+	left: 0;
+	margin-top: -0.15rem;
+	position: absolute;
+	right: 0;
+	top: 50%;
+}
+
+.input-range__track--active {
+	background: #3f51b5;
+	background: #3fd84770;
+}
+
+.input-range {
+	height: 1rem;
+	position: relative;
+	width: 100%;
+}
+
+/* END of GLOBAL styles */
 #menu__2D0Gg {
 	top: 0;
 	left: 0;
@@ -116,106 +379,6 @@ body {
 		width: auto;
 		padding: 0;
 	}
-}
-.buttonWrapper__1N15P {
-	display: flex;
-	justify-content: space-between;
-}
-.buttonWrapper__1N15P button {
-	border: 0;
-	font-size: 22px;
-	font-weight: 400;
-	background-color: #eee;
-	color: #a0a0a0;
-	height: 52px;
-	min-width: 52px;
-	border-radius: 25px;
-	cursor: pointer;
-}
-.buttonWrapper__1N15P button:hover {
-	background-color: #ddd;
-}
-.buttonWrapper__1N15P button[data-action="next"] {
-	padding: 0 35px;
-	margin-left: auto;
-}
-.slidecontainer__1XLQf {
-	width: auto;
-	/* Width of the outside container */
-	background-color: #fff;
-	padding: 10px 22px 50px 22px;
-	padding: 10px 0px 50px 0px;
-}
-
-/* The slider itself */
-.slider__3cExz {
-	-webkit-appearance: none;
-	width: calc(100% - 46px);
-	height: 15px;
-	border-radius: 5px;
-	outline: none;
-	opacity: 0.7;
-	transition: opacity 0.2s;
-	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,ffffff+10,3FD847+10,3FD847+90,ffffff+90,ffffff+100 */
-	background: #ffffff;
-	/* Old browsers */
-	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#3fd847+0,3fd847+17,ffffff+17,ffffff+20,3fd847+20,3fd847+37,ffffff+37,ffffff+40,3fd847+40,3fd847+57,ffffff+57,ffffff+60,3fd847+60,3fd847+77,ffffff+77,ffffff+80,3fd847+80,3fd847+100 */
-	background: #3fd847;
-	/* Old browsers */
-	/* FF3.6-15 */
-	/* Chrome10-25,Safari5.1-6 */
-	background: linear-gradient(
-		to right,
-		#3fd847 0%,
-		#3fd847 18%,
-		#ffffff 18%,
-		#ffffff 20.5%,
-		#3fd847 20.5%,
-		#3fd847 38.5%,
-		#ffffff 38.5%,
-		#ffffff 41%,
-		#3fd847 41%,
-		#3fd847 59%,
-		#ffffff 59%,
-		#ffffff 61.5%,
-		#3fd847 61.5%,
-		#3fd847 79.5%,
-		#ffffff 79.5%,
-		#ffffff 82%,
-		#3fd847 82%,
-		#3fd847 100%
-	);
-	/* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3fd847', endColorstr='#3fd847',GradientType=1 );
-	/* IE6-9 */
-	padding: 0px 0;
-	margin: 20px 22px 20px 22px;
-	border-top: 10px solid #fff;
-	border-bottom: 10px solid #fff;
-}
-
-.slider__3cExz::-webkit-slider-thumb {
-	-webkit-appearance: none;
-	appearance: none;
-	width: 20%;
-	height: 50px;
-	border-radius: 50%;
-	background: #4caf50;
-	cursor: pointer;
-	transition: 0.1s;
-}
-
-.slider__3cExz::-moz-range-thumb {
-	width: 20%;
-	height: 50px;
-	border-radius: 50%;
-	background: #4caf50;
-	cursor: pointer;
-	transition: 0.1s;
-}
-
-.questAnswer__1CVma {
-	opacity: 0;
 }
 .questWrapper__1wuKP {
 	padding-top: 10px;
@@ -343,6 +506,106 @@ body {
 		max-width: 320px;
 		width: calc(100% - 44px);
 	}
+}
+.slidecontainer__1XLQf {
+	width: auto;
+	/* Width of the outside container */
+	background-color: #fff;
+	padding: 10px 22px 50px 22px;
+	padding: 10px 0px 50px 0px;
+}
+
+/* The slider itself */
+.slider__3cExz {
+	-webkit-appearance: none;
+	width: calc(100% - 46px);
+	height: 15px;
+	border-radius: 5px;
+	outline: none;
+	opacity: 0.7;
+	transition: opacity 0.2s;
+	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,ffffff+10,3FD847+10,3FD847+90,ffffff+90,ffffff+100 */
+	background: #ffffff;
+	/* Old browsers */
+	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#3fd847+0,3fd847+17,ffffff+17,ffffff+20,3fd847+20,3fd847+37,ffffff+37,ffffff+40,3fd847+40,3fd847+57,ffffff+57,ffffff+60,3fd847+60,3fd847+77,ffffff+77,ffffff+80,3fd847+80,3fd847+100 */
+	background: #3fd847;
+	/* Old browsers */
+	/* FF3.6-15 */
+	/* Chrome10-25,Safari5.1-6 */
+	background: linear-gradient(
+		to right,
+		#3fd847 0%,
+		#3fd847 18%,
+		#ffffff 18%,
+		#ffffff 20.5%,
+		#3fd847 20.5%,
+		#3fd847 38.5%,
+		#ffffff 38.5%,
+		#ffffff 41%,
+		#3fd847 41%,
+		#3fd847 59%,
+		#ffffff 59%,
+		#ffffff 61.5%,
+		#3fd847 61.5%,
+		#3fd847 79.5%,
+		#ffffff 79.5%,
+		#ffffff 82%,
+		#3fd847 82%,
+		#3fd847 100%
+	);
+	/* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3fd847', endColorstr='#3fd847',GradientType=1 );
+	/* IE6-9 */
+	padding: 0px 0;
+	margin: 20px 22px 20px 22px;
+	border-top: 10px solid #fff;
+	border-bottom: 10px solid #fff;
+}
+
+.slider__3cExz::-webkit-slider-thumb {
+	-webkit-appearance: none;
+	appearance: none;
+	width: 20%;
+	height: 50px;
+	border-radius: 50%;
+	background: #4caf50;
+	cursor: pointer;
+	transition: 0.1s;
+}
+
+.slider__3cExz::-moz-range-thumb {
+	width: 20%;
+	height: 50px;
+	border-radius: 50%;
+	background: #4caf50;
+	cursor: pointer;
+	transition: 0.1s;
+}
+
+.questAnswer__1CVma {
+	opacity: 0;
+}
+.buttonWrapper__1N15P {
+	display: flex;
+	justify-content: space-between;
+}
+.buttonWrapper__1N15P button {
+	border: 0;
+	font-size: 22px;
+	font-weight: 400;
+	background-color: #eee;
+	color: #a0a0a0;
+	height: 52px;
+	min-width: 52px;
+	border-radius: 25px;
+	cursor: pointer;
+}
+.buttonWrapper__1N15P button:hover {
+	background-color: #ddd;
+}
+.buttonWrapper__1N15P button[data-action="next"] {
+	padding: 0 35px;
+	margin-left: auto;
 }
 
 /*# sourceMappingURL=data:application/json;charset=utf-8;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbXSwibmFtZXMiOltdLCJtYXBwaW5ncyI6IiIsImZpbGUiOiJzdHlsZS5jc3MiLCJzb3VyY2VSb290IjoiIn0=*/
