--- a/src/components/Menu/Menu.scss
+++ b/src/components/Menu/Menu.scss
@@ -1,7 +1,26 @@
-.block-test {
-    background-color: blue;
+.Menu {
 
-    h1 {
-        color: red;
+    .MenuList {
+        display: flex;
+        margin: 0;
+        padding: 0;
+
+        li {
+            list-style: none;
+            padding-right: 20px;
+            a {
+                color: black;
+
+                &.active {
+                    text-decoration: none;
+                    pointer-events: none;
+                    font-weight: bold;
+                }
+            }
+
+
+        }
     }
+
+
 }
