--- a/src/global.scss
+++ b/src/global.scss
@@ -2,7 +2,11 @@ body {
     margin: 0;
 }
 
-.outer-wrp {
+.outerWrp {
     max-width: 500px;
     margin: 0 auto;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    padding: 20px;
+    box-sizing: border-box;
 }
