--- a/src/components/Slider/Slider.scss
+++ b/src/components/Slider/Slider.scss
@@ -7,3 +7,22 @@
     }
 
 }
+
+
+/*  -= Default =- */
+.move-appear {    transform: translate3D(100%, 0, 0);}
+.move-appear-active {    transform: translate3D(0, 0, 0); transition: all 700ms ease-out;}
+
+.move-enter {opacity: 1; background: #ffccc2; transform: translate3D(100%, 0, 0);  position: absolute;}
+.move-enter-active {transform: translate3D(0%, 0, 0); opacity: 1; transition: all 700ms ease-out;  position: absolute;}
+.move-leave {opacity: 1; }
+.move-leave-active {transform: translate3D(-100%, 0, 0); opacity: 1;transition: all 700ms ease-out; }
+
+/*  -= Next =- */
+.move-next-appear {    transform: translate3D(100%, 0, 0);}
+.move-next-appear-active {    transform: translate3D(0, 0, 0); transition: all 700ms ease-out;}
+
+.move-next-enter {opacity: 1; background: transparent; transform: translate3D(100%, 0, 0);  position: absolute;}
+.move-next-enter-active {transform: translate3D(0%, 0, 0); opacity: 1; transition: all 700ms ease-out;  }
+.move-next-leave {opacity: 1; }
+.move-next-leave-active {transform: translate3D(-100%, 0, 0); opacity: 1;transition: all 700ms ease-out; }
