--- a/src/components/Quest/Quest.scss
+++ b/src/components/Quest/Quest.scss
@@ -4,5 +4,27 @@
 .Quest {
 
     //background-color: green;
-
+  .QuestText {
+    background-color: #EEEEEE;
+    padding: 20px;
+    .QuestNumber {
+      color: #474747;
+      font-weight: bold;
+      font-size: 14px;
+      margin: 0 0 5px;
+    }
+    .QuestTitle {
+      color: #474747;
+      font-size: 29px;
+      font-weight: bold;
+      line-height: 35px;
+    }
+    .QuestDescription {
+      opacity: 0.7;
+      color: #000000;
+      font-size: 16px;
+      line-height: 22px;
+      margin: 0;
+    }
+  }
 }
