--- a/src/components/Slider/Slider.scss
+++ b/src/components/Slider/Slider.scss
@@ -1,9 +1,28 @@
 .Slider {
 
-    background-color: #ccc;
-
     .SliderControl {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        padding: 20px;
+        .SliderBtn {
+            height: 52px;
+            min-width: 52px;
+            border-radius: 26px;
+            background-color: #EEEEEE;
+            border: none;
+            color: #A0A0A0;
+            font-size: 19px;
+            letter-spacing: 0.52px;
 
+            cursor: pointer;
+
+
+            &.SliderBtnNxt {
+                display: block;
+                padding: 0 20px;
+            }
+        }
     }
 
 }
