--- a/src/global.scss
+++ b/src/global.scss
@@ -5,9 +5,9 @@ body {
 .outerWrp {
     max-width: 500px;
     margin: 0 auto;
-    border: 1px solid #ccc;
-    border-radius: 10px;
-    padding: 20px;
+    //border: 1px solid #ccc;
+    //border-radius: 10px;
+    //padding: 20px;
     box-sizing: border-box;
     overflow: hidden;
 }
