add styles to Quest

--- a/src/components/Quest/Quest.scss
+++ b/src/components/Quest/Quest.scss
@@ -37,10 +37,15 @@
       font-size: 23px;
       font-weight: bold;
       line-height: 28px;
+      margin-bottom: 10px;
     }
     .QuestAnswerDescr {
       font-size: 15px;
       line-height: 21px;
     }
+  }
+
+  .QuestRangeSliderWrp {
+    padding: 0 20px;
   }
 }
