--- a/src/components/Quest/Quest.scss
+++ b/src/components/Quest/Quest.scss
@@ -32,6 +32,7 @@
     padding: 20px;
     min-height: 130px;
     text-align: center;
+    margin-bottom: 40px;
     .QuestAnswerLevel {
       color: #59C188;
       font-size: 23px;
