add flex styles to all main blocks

--- a/src/components/Slider/Slider.scss
+++ b/src/components/Slider/Slider.scss
@@ -1,5 +1,16 @@
 .Slider {
 
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    height: 100%;
+    padding-bottom: 20px;
+
+    .SliderTransition {
+        flex-grow: 1;
+    }
+
     .SliderControl {
         display: flex;
         flex-wrap: wrap;
