--- a/src/components/Quest/Quest.scss
+++ b/src/components/Quest/Quest.scss
@@ -2,7 +2,9 @@
 
 }
 .Quest {
-
+  height: 100%;
+  display: flex;
+  flex-direction: column;
     //background-color: green;
   .QuestText {
     background-color: #EEEEEE;
@@ -18,6 +20,7 @@
       font-size: 29px;
       font-weight: bold;
       line-height: 35px;
+      text-transform: uppercase;
     }
     .QuestDescription {
       opacity: 0.7;
@@ -30,7 +33,7 @@
 
   .QuestAnswers {
     padding: 20px;
-    min-height: 130px;
+    min-height: 200px;
     text-align: center;
     margin-bottom: 40px;
     .QuestAnswerLevel {
@@ -48,5 +51,9 @@
 
   .QuestRangeSliderWrp {
     padding: 0 20px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
   }
 }
