--- a/src/components/Slider/Slider.scss
+++ b/src/components/Slider/Slider.scss
@@ -4,7 +4,7 @@
     flex-direction: column;
     flex-wrap: wrap;
     justify-content: space-between;
-    height: 100%;
+    height: calc( 100% - 20px);
     padding-bottom: 20px;
 
     .SliderTransition {
@@ -15,7 +15,7 @@
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
-        padding: 20px;
+        padding: 20px 20px 0;
         .SliderBtn {
             height: 52px;
             min-width: 52px;
