--- a/src/components/Quest/Quest.scss
+++ b/src/components/Quest/Quest.scss
@@ -57,3 +57,13 @@
     justify-content: flex-end;
   }
 }
+
+
+:global {
+  .ant-slider-handle {
+    height: 50px;
+    width: 52px;
+    margin-top: -15px;
+    background-color: #59C188;
+  }
+}
