--- a/src/components/Quest/Quest.scss
+++ b/src/components/Quest/Quest.scss
@@ -35,7 +35,7 @@
     padding: 20px;
     min-height: 200px;
     text-align: center;
-    margin-bottom: 40px;
+    //margin-bottom: 40px;
     .QuestAnswerLevel {
       color: #59C188;
       font-size: 23px;
