--- a/src/components/Quest/Quest.scss
+++ b/src/components/Quest/Quest.scss
@@ -33,7 +33,8 @@
 
   .QuestAnswers {
     padding: 20px;
-    min-height: 200px;
+    min-height: 120px;
+    max-height: 130px;
     text-align: center;
     //margin-bottom: 40px;
     .QuestAnswerLevel {
@@ -65,6 +66,10 @@
     width: 52px;
     margin-top: -15px;
     background-color: #59C188;
+
+    &:focus {
+      box-shadow: none;
+    }
   }
 
   .ant-slider-rail {
@@ -116,5 +121,9 @@
     //                #7DD29D 0,
     //                #7DD29D
     //);
+  }
+
+  .ant-slider:hover .ant-slider-track {
+    background-color: #7DD29D;
   }
 }
