add new colored bg to inputRange

--- a/src/components/Slider/Slider.scss
+++ b/src/components/Slider/Slider.scss
@@ -32,7 +32,7 @@
 
             &.SliderBtnNxt {
                 display: block;
-                padding: 10px 20px 14px;
+                padding: 12px 20px;
             }
         }
     }
