--- a/src/components/Quest/Quest.scss
+++ b/src/components/Quest/Quest.scss
@@ -1,3 +1,27 @@
+@mixin inputRangeBg($st1, $st2, $st3, $st4) {
+  background: linear-gradient(
+                  90deg,
+                  $st1 0,
+                  $st1 18%,
+                  #fff 0,
+                  #fff 20.5%,
+                  $st2 0,
+                  $st2 38.5%,
+                  #fff 0,
+                  #fff 41%,
+                  $st3 0,
+                  $st3 59%,
+                  #fff 0,
+                  #fff 61.5%,
+                  $st4 0,
+                  $st4 79.5%,
+                  #fff 0,
+                  #fff 82%,
+                  #eee 0,
+                  #eee
+  );
+}
+
 .QuestWrp {
 
 }
@@ -43,6 +67,7 @@
       font-weight: bold;
       line-height: 28px;
       margin-bottom: 10px;
+      text-transform: uppercase;
     }
     .QuestAnswerDescr {
       font-size: 15px;
@@ -56,6 +81,44 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
+
+    &.QuestRangeSliderWrp--100 {
+      :global {
+        .ant-slider-rail {
+          @include inputRangeBg(#A0E2B1, #eee, #eee, #eee);
+        }
+      }
+    }
+    &.QuestRangeSliderWrp--200 {
+      :global {
+        .ant-slider-rail {
+          @include inputRangeBg(#A0E2B1, #eee, #eee, #eee);
+        }
+      }
+    }
+    &.QuestRangeSliderWrp--300 {
+      :global {
+        .ant-slider-rail {
+          @include inputRangeBg(#A0E2B1, #7DD29D, #eee, #eee);
+        }
+      }
+    }
+    &.QuestRangeSliderWrp--400 {
+      :global {
+        .ant-slider-rail {
+          @include inputRangeBg(#A0E2B1, #7DD29D, #59C188, #eee);
+        }
+      }
+    }
+    &.QuestRangeSliderWrp--500 {
+      :global {
+        .ant-slider-rail {
+          @include inputRangeBg(#A0E2B1, #7DD29D, #59C188, #36B073);
+        }
+      }
+
+
+    }
   }
 }
 
@@ -66,9 +129,21 @@
     width: 52px;
     margin-top: -15px;
     background-color: #59C188;
-
+    position: relative;
+    
     &:focus {
       box-shadow: none;
+    }
+
+    &:after {
+      content: "?";
+      position: absolute;
+      font-size: 33px;
+      color: white;
+      font-weight: bold;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
     }
   }
 
@@ -100,6 +175,7 @@
   }
 
   .ant-slider-track {
+    display: none;
     height: 15px;
     background-color: #7DD29D;
     //margin: 0px -25px;
