--- a/src/global.scss
+++ b/src/global.scss
@@ -50,6 +50,7 @@ $baseMargBottom: 32px;
         //padding: 20px;
         box-sizing: border-box;
         overflow: hidden;
+        height: 100vh;
     }
 }
 
