--- a/src/global.scss
+++ b/src/global.scss
@@ -22,38 +22,42 @@
     );
 }
 
-body {
-    margin: 0;
-    font-family: 'Montserrat';
-}
-
-
 $baseMargBottom: 32px;
 
+$base-color: #77AFA7;
+$second-color: #FFF128;
+$white-color: #FFF;
+
+
+
 .startScreen {
+
+    background-color: $base-color !important;
     padding: 20px;
     h1 {
-        color: #474747;
+        color: $white-color;
         font-size: 18px;
         margin-bottom: $baseMargBottom;
+        font-weight: 700;
     }
     h2 {
-        color: #6590FF;
-        font-size: 38px;
-        line-height: 40px;
+        color: $second-color;
+        font-size: 41px;
+        line-height: 44px;
         font-weight: 800;
         margin-bottom: $baseMargBottom;
     }
     p {
-        color: #000000;
+        color: $white-color;
         font-size: 15px;
         margin-bottom: $baseMargBottom;
     }
     .startTestBtn {
         border-radius: 29px;
-        background-color: #6590FF;
-        color: #fff;
-        padding: 18px 60px 19px 30px;
+        background-color: $second-color;
+        color: #000;
+        font-weight: 600;
+        padding: 18px 50px 19px 50px;
         display: inline-block;
         font-size: 16px;
         text-transform: uppercase;
@@ -123,7 +127,8 @@ $baseMargBottom: 32px;
         //padding: 20px;
         box-sizing: border-box;
         overflow: hidden;
-        //height: 100vh; // ломает прокрутку в конце
+        min-height: 100vh; // ломает прокрутку в конце
+        font-family: 'Montserrat', sans-serif !important;
     }
 }
 
