--- a/src/components/Quest/Quest.scss
+++ b/src/components/Quest/Quest.scss
@@ -83,7 +83,7 @@ $inputRange-c5: #F7E91B;
   }
 
   .QuestRangeSliderWrp {
-    padding: 0 20px 20px;
+    padding: 40px 20px 20px;
     height: 100%;
     display: flex;
     flex-direction: column;
