--- a/src/components/Slider/Slider.scss
+++ b/src/components/Slider/Slider.scss
@@ -1,3 +1,9 @@
+@mixin container($width) {
+    max-width: $width;
+    margin: 0 auto;
+    width: 100%;
+}
+
 .Slider {
 
     display: flex;
@@ -6,6 +12,15 @@
     justify-content: space-between;
     height: calc( 100% - 20px);
     padding-bottom: 20px;
+
+    .Slider__Container {
+        height: 100%;
+        @media (min-width: 992px) {
+            @include container(1140px);
+        }
+
+    }
+
 
     .SliderTransition {
         flex-grow: 1;
