--- a/src/global.scss
+++ b/src/global.scss
@@ -1,3 +1,13 @@
+$breakpoints: (
+        'xs': ('(min-width: 576px)'),
+        'sm': ('(min-width: 768px)'),
+        'md': ('(min-width: 992px)'),
+        'lg': ('(min-width: 1200px)'),
+        'xl': ('(min-width: 1600px)'),
+);
+
+
+
 @mixin resultBarBg($st1, $st2, $st3, $st4, $st5) {
     background: linear-gradient(
                     90deg,
@@ -22,6 +32,12 @@
     );
 }
 
+@mixin container($width) {
+    max-width: $width;
+    margin: 0 auto;
+    width: 100%;
+}
+
 $baseMargBottom: 30px;
 
 $base-color: #77AFA7;
@@ -39,44 +55,57 @@ $inputRange-c5: #F7E91B;
     min-height: 100vh;
     background-color: $base-color !important;
     padding: 35px 20px 0;
-    h1 {
-        color: $white-color;
-        font-size: 18px;
-        margin-bottom: $baseMargBottom;
-        font-weight: 700;
-    }
-    h2 {
-        color: $second-color;
-        font-size: 41px;
-        line-height: 44px;
-        font-weight: 800;
-        margin-bottom: $baseMargBottom;
-    }
-    p {
-        color: $white-color;
-        font-size: 15px;
-        margin-bottom: $baseMargBottom;
-    }
-    .startTestBtn {
-        border-radius: 29px;
-        background-color: $second-color;
-        color: #000;
-        font-weight: 600;
-        padding: 18px 50px 19px 50px;
-        display: inline-block;
-        font-size: 16px;
-        text-transform: uppercase;
-        box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.3);
-        span {
-            line-height: 16px;
-            font-size: 24px;
+
+
+    .startScreen__Container {
+        height: 100%;
+        @media (min-width: 992px) {
+            padding: 100px 200px;
+            @include container(1140px);
+        }
+
+
+        h1 {
+            color: $white-color;
+            font-size: 18px;
+            margin-bottom: $baseMargBottom;
+            font-weight: 700;
+        }
+        h2 {
+            color: $second-color;
+            font-size: 41px;
+            line-height: 44px;
+            font-weight: 800;
+            margin-bottom: $baseMargBottom;
+        }
+        p {
+            color: $white-color;
+            font-size: 15px;
+            margin-bottom: $baseMargBottom;
+        }
+        .startTestBtn {
+            border-radius: 29px;
+            background-color: $second-color;
+            color: #000;
+            font-weight: 600;
+            padding: 18px 50px 19px 50px;
+            display: inline-block;
+            font-size: 16px;
+            text-transform: uppercase;
+            box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.3);
+            span {
+                line-height: 16px;
+                font-size: 24px;
+            }
         }
     }
+
 }
 
 .resultPage {
     padding: 15px 20px;
-    
+
+
     h1 {
         text-transform: uppercase;
         color: #474747;
@@ -125,17 +154,23 @@ $inputRange-c5: #F7E91B;
 
 :global {
     .outerWrp {
-        max-width: 500px;
+        //max-width: 500px;
         margin: 0 auto;
         //border: 1px solid #ccc;
         //border-radius: 10px;
-        //padding: 20px;
+
         box-sizing: border-box;
         overflow: hidden;
         min-height: 100vh; // ломает прокрутку в конце
         font-family: 'Montserrat', sans-serif !important;
+
+        //@media (min-width: 992px) {
+        //    max-width: 1140px;
+        //}
+
+        //@include respond-to('md') {
+        //
+        //}
     }
 }
-
-
 
