update styles to Name Page, add Username to Store, add Username saving system

--- a/src/global.scss
+++ b/src/global.scss
@@ -137,6 +137,8 @@ $inputRange-c5: #F7E91B;
             width: 100%;
             max-width: 270px;
             margin-bottom: 25px;
+            padding: 4px 10px;
+            font-size: 20px;
         }
 
         .namePageBtn {
