--- a/src/components/Quest/Quest.scss
+++ b/src/components/Quest/Quest.scss
@@ -52,7 +52,7 @@ $inputRange-c5: #F7E91B;
       font-weight: bold;
       line-height: 35px;
       text-transform: uppercase;
-      word-break: break-all;
+      //word-break: break-all;
     }
     .QuestDescription {
       opacity: 0.7;
